ops/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: coldyy
  labels:
    name: coldyy
